# CivicSignal

./: .gitignore  Dockerfile  LICENSE  README.md  hello.py  mise.local.toml  mise.toml  pyproject.toml  transcript1.html
Transform/: RAGTest.py
civicsignal/: __init__.py  app.py  chat.py  cli.py  utils.py
civicsignal/ingest/: __init__.py  agendas.py  archives.py  livestream.py  utils.py
civicsignal/layouts/: app.grid.json
civicsignal/output/: similar_topics.py
civicsignal/transform/: RAGTest.py  embed_meeting.py
